rm 2p fix clipped commentator

--- a/public/rm/two.css
+++ b/public/rm/two.css
@@ -419,7 +419,6 @@ tr-timer span {
     left: 50%;
     transform: translate(-50%);
     width: 327px;
-    height: 170px;
     background-color: #280642;
 }
 
